fix inner grid spacing

--- a/styles/format.css
+++ b/styles/format.css
@@ -119,5 +119,5 @@ body {
     column-gap: 20px;
     row-gap: 20px;
     
-    padding: 20px;
+    padding-left: 20px;
 }
